Mail & TreeView PlanCadre

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/Pedagogie.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/Pedagogie.cshtml
@@ -17,7 +17,7 @@
             <p>Gestion des devis ministériels</p>
         </a>
         
-        <a class="icon">
+        <a class="icon" href='@Url.Action("Index", "PlanCadre")'>
             <span class="glyphicon glyphicon-blackboard"></span>
             <p>Gestion des plans cadre</p>
         </a>
