--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/IndexFabrice.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/IndexFabrice.cshtml
@@ -18,6 +18,8 @@
                 </a>
             }
 
+            <hr />
+            <h1>Modification</h1>
             @*
             <a class="fancy-button" href='@Url.Action("Create", "EnonceCompetence", new { idPlanCadre = Model.idPlanCadre })'><span class="glyphicon glyphicon-plus"><!----></span> Ajsouter un Plan cadre</a>
             *@
