--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportPlanCadre.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportPlanCadre.cshtml
@@ -1,4 +1,4 @@
-﻿@model dynamic
+﻿@model ApplicationPlanCadre.Models.PlanCadre
 @using ApplicationPlanCadre.Models
 @{
     ViewBag.Title = "RapportPlanCadre";
@@ -122,19 +122,12 @@
     }
 </style>
 <div class="pdf">
-   @foreach (PlanCadre planCadre in Model.PlanCadre)
-   {
-
-       foreach (SecondaryProgramme programme in Model.Programme)
-       {
-            foreach (SecondaryDevisMinistere devisMinistere in Model.DevisMinistere)
-            {
-               <!-- barre top -->
+            <!-- barre top -->
                
             <div class="divtop">
-                @Html.DisplayFor(x => programme.nom)
+                @Html.DisplayFor(x => Model.Programme.nom)@*nom programme*@
                 <br />
-                @Html.DisplayFor(x => devisMinistere.specialisation)
+                @Html.DisplayFor(x => Model.Programme.DevisMinistere.specialisation)@*devis specialisation*@
             </div>
             <!-- début de l'entête -->
             <div class="entete">
@@ -147,17 +140,17 @@
                         Pondération :
                     </div>
                     <div class="inner-right">
-                        @Html.DisplayFor(x => planCadre.titreCours)
+                        @Html.DisplayFor(x => Model.titreCours)@*titre cours*@
                         <br />
-                        @Html.DisplayFor(x => planCadre.nbHeureTheorie) - @Html.DisplayFor(x => planCadre.nbHeurePratique) - @Html.DisplayFor(x => planCadre.nbHeureDevoir)
+                        @Html.DisplayFor(x => Model.nbHeureTheorie) - @Html.DisplayFor(x => Model.nbHeurePratique) - @Html.DisplayFor(x => Model.nbHeureDevoir)
                     </div>
                 </div>
                 <div class="entete-right">
                     <br />
                     <div class="inner2-left">
-                        @Html.DisplayFor(x => planCadre.numeroCours)
+                        @Html.DisplayFor(x => Model.numeroCours)
                         <br />
-                        @Html.DisplayFor(x => devisMinistere.codeProgramme).@Html.DisplayFor(x => devisMinistere.codeSpecialisation)
+                        @Html.DisplayFor(x => Model.Programme.DevisMinistere.codeProgramme)@*code programme devis*@.@Html.DisplayFor(x => Model.Programme.DevisMinistere.codeSpecialisation)
                     </div>
                     <div class="inner2-right">
                         Numéro du cours :
@@ -191,50 +184,38 @@
                        
                         @foreach (PlanCadreEnonce a in Model.PlanCadreEnonce)
                         {
-                            foreach (SecondaryEnonceCompetence b in Model.EnonceCompetence)
-                            {
-                                if (a.idCompetence == b.idCompetence)
-                                {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(x => b.description) (@Html.DisplayFor(x => b.codeCompetence))
+                            <tr>
+                                 <td>
+                                            @Html.DisplayFor(x => a.EnonceCompetence.description) (@Html.DisplayFor(x => a.EnonceCompetence.codeCompetence))
                                             <br />
                                             <br />
                                             @Html.DisplayFor(x => a.ponderationEnHeure) heures
-                                        </td>
+                                 </td>
                                         <td>
-                                            @foreach(SecondaryContexteRealisation c in Model.ContexteRealisation)
+                                            @foreach(ContexteRealisation c in a.EnonceCompetence.ContexteRealisation)
                                             {
-                                                if(b.idCompetence == c.idCompetence)
-                                                {
-                                                    
+                                               
                                                      @Html.Raw("-")@Html.DisplayFor(x => c.description)
                                                     <br />
                                                     <br />
-                                                }
-                                            }
+                                             }
+                                            
                                         </td>
                                     </tr>
-                                }
-                            }
-                        }
+                         }
+                         
                     </tbody>
                 </table>
                 
     @foreach (PlanCadreEnonce a in Model.PlanCadreEnonce)
     {
                 <!-- Affichage en boucle des tableau des ennoncer compétence-->
-        foreach (SecondaryEnonceCompetence b in Model.EnonceCompetence)
-        {
-            if (a.idCompetence == b.idCompetence)
-            {
-                
                     <div style="margin-top:50px;">
                         <table>
                             <thead>
                                 <tr>
                                     <td colspan="4">
-                                        @Html.DisplayFor(x => b.description) (@Html.DisplayFor(x => b.codeCompetence))
+                                        @Html.DisplayFor(x => a.EnonceCompetence.description) (@Html.DisplayFor(x => a.EnonceCompetence.codeCompetence))
                                     </td>
                                 </tr>
                                 <tr>
@@ -253,25 +234,25 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (SecondaryElementCompetence elementCompt in Model.ElementCompetence)
-                                    {
-                                        if (b.idCompetence == elementCompt.idCompetence)
-                                        {
+                                @foreach (ElementCompetence elementCompt in a.EnonceCompetence.ElementCompetence)
+                                {
+                                    //if (b.idCompetence == elementCompt.idCompetence)
+                                    //{
                                         <tr>
                                             <td width="25%">
-                                                @Html.DisplayFor(x => elementCompt.numeros)<span>. </span>@Html.DisplayFor(x => elementCompt.description)
+                                                @Html.DisplayFor(x => elementCompt.numero)<span>. </span>@Html.DisplayFor(x => elementCompt.description)
                                                 <br />
                                             </td>
                                             <td width="35%">
-                                                
-                                                    @foreach (SecondaryCriterePerformance criterePerf in Model.CriterePerformance)
+
+                                                    @foreach (CriterePerformance criterePerf in elementCompt.CriterePerformance)
                                                     {
                                                         if (elementCompt.idElement == criterePerf.idElement)
                                                         {
 
                                                             <div style="margin-top:15px;">
                                                                 <div class="critere-left">
-                                                                    @Html.DisplayFor(x => elementCompt.numeros)<span>.</span>@Html.DisplayFor(x => criterePerf.numero) 
+                                                                    @Html.DisplayFor(x => elementCompt.numero)<span>.</span>@Html.DisplayFor(x => criterePerf.numero)
                                                                 </div>
                                                                 <div class="critere-right">
                                                                     @Html.DisplayFor(x => criterePerf.description)
@@ -280,23 +261,24 @@
                                                             </div>
                                                         }
                                                     }
-                                                
+
                                             </td>
                                         </tr>
                                     }
-                                }
+                                
                             </tbody>
                         </table>
                     </div>
-                
-            }
-        }
 
-    }
+            }
+        
+
+    
+    
            </div>
-           }
-       }
-   }
+           
+       
+   
 </div>
 
 
