--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
@@ -1,5 +1,4 @@
-﻿@*@model dynamic*@
-@model ApplicationPlanCadre.Models.Programme
+﻿@model ApplicationPlanCadre.Models.Programme
 @using ApplicationPlanCadre.Models
 
 @{
