--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/Index.cshtml
@@ -18,9 +18,9 @@
                 </a>
             }
 
-            @*
-            <a class="fancy-button" href='@Url.Action("Create", "EnonceCompetence", new { idPlanCadre = Model.idPlanCadre })'><span class="glyphicon glyphicon-plus"><!----></span> Ajsouter un Plan cadre</a>
-            *@
+            <hr />
+            <h1>Modification</h1>
+            <a class="fancy-button" href='@Url.Action("Create", "PlanCadre", new {id = Model.})'><span class="glyphicon glyphicon-plus"><!----></span> Ajouter un plan cadre</a>
         </div>
     </div>
 </div>
