--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/PlanCadreDetail.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/PlanCadreDetail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model dynamic
 @using ApplicationPlanCadre.Models
 @{
-    ViewBag.Title = "RapportPlanCadre";
+    ViewBag.Title = "PlanCadre";
     bool rowspanDone = false;
 }
 <style>
