--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/PlanCadreDetail.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/PlanCadreDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model dynamic
+﻿@model ApplicationPlanCadre.Models.PlanCadre
 @using ApplicationPlanCadre.Models
 @{
     ViewBag.Title = "PlanCadre";
@@ -130,197 +130,176 @@
     @Html.Action("_TreeView")
 
     <div id="info-display" class="container-fluid">
+        <div class="pdf">
+            <!-- barre top -->
 
-
-
-
-
-    <div class="pdf">
-        @foreach (PlanCadre planCadre in Model.PlanCadre)
-        {
-
-            foreach (Programme programme in Model.Programme)
-            {
-                foreach (DevisMinistere devisMinistere in Model.DevisMinistere)
-                {
-               <!-- barre top -->
-
-                    <div class="divtop">
-                        @Html.DisplayFor(x => programme.nom)
-                        <br />
-                        @Html.DisplayFor(x => devisMinistere.specialisation)
-                    </div>
+            <div class="divtop">
+                @Html.DisplayFor(x => Model.Programme.nom)@*nom programme*@
+                <br />
+                @Html.DisplayFor(x => Model.Programme.DevisMinistere.specialisation)@*devis specialisation*@
+            </div>
             <!-- début de l'entête -->
-                    <div class="entete">
-                        <div class="entete-left">
-                            <br />
+            <div class="entete">
+                <div class="entete-left">
+                    <br />
 
-                            <div class="inner-left">
-                                Titre du cours :
-                                <br />
-                                Pondération :
-                            </div>
-                            <div class="inner-right">
-                                @Html.DisplayFor(x => planCadre.titreCours)
-                                <br />
-                                @Html.DisplayFor(x => planCadre.nbHeureTheorie) - @Html.DisplayFor(x => planCadre.nbHeurePratique) - @Html.DisplayFor(x => planCadre.nbHeureDevoir)
-                            </div>
-                        </div>
-                        <div class="entete-right">
-                            <br />
-                            <div class="inner2-left">
-                                @Html.DisplayFor(x => planCadre.numeroCours)
-                                <br />
-                                @Html.DisplayFor(x => devisMinistere.codeProgramme).@Html.DisplayFor(x => devisMinistere.codeSpecialisation)
-                            </div>
-                            <div class="inner2-right">
-                                Numéro du cours :
-                                <br />
-                                Programme :
-
-                            </div>
-
-                        </div>
+                    <div class="inner-left">
+                        Titre du cours :
+                        <br />
+                        Pondération :
                     </div>
-                    <div id="clear"></div>
+                    <div class="inner-right">
+                        @Html.DisplayFor(x => Model.titreCours)@*titre cours*@
+                        <br />
+                        @Html.DisplayFor(x => Model.nbHeureTheorie) - @Html.DisplayFor(x => Model.nbHeurePratique) - @Html.DisplayFor(x => Model.nbHeureDevoir)
+                    </div>
+                </div>
+                <div class="entete-right">
+                    <br />
+                    <div class="inner2-left">
+                        @Html.DisplayFor(x => Model.numeroCours)
+                        <br />
+                        @Html.DisplayFor(x => Model.Programme.DevisMinistere.codeProgramme)@*code programme devis*@.@Html.DisplayFor(x => Model.Programme.DevisMinistere.codeSpecialisation)
+                    </div>
+                    <div class="inner2-right">
+                        Numéro du cours :
+                        <br />
+                        Programme :
+
+                    </div>
+
+                </div>
+            </div>
+            <div id="clear"></div>
 
 
             <!-- début du corps du plan cadre-->
-                    <div class="corps">
+            <div class="corps">
+                <table>
+                    <thead>
+                        <tr>
+                            <td style="width:20%;">
+                                Objectif - Énoncé des compétences
+                            </td>
+                            <td style="width:45%;">
+                                Standard - Contexte de réalisation
+                            </td>
+                            <td>
+                                Indication pédagogiques, s'il y a lieu
+                            </td>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        @foreach (PlanCadreEnonce a in Model.PlanCadreEnonce)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(x => a.EnonceCompetence.description) (@Html.DisplayFor(x => a.EnonceCompetence.codeCompetence))
+                                    <br />
+                                    <br />
+                                    @Html.DisplayFor(x => a.ponderationEnHeure) heures
+                                </td>
+                                <td>
+                                    @foreach (ContexteRealisation c in a.EnonceCompetence.ContexteRealisation)
+                                    {
+
+                                        @Html.Raw("-")@Html.DisplayFor(x => c.description)
+                                        <br />
+                                                    <br />
+                                    }
+
+                                </td>
+                            </tr>
+                        }
+
+                    </tbody>
+                </table>
+
+                @foreach (PlanCadreEnonce a in Model.PlanCadreEnonce)
+                {
+                <!-- Affichage en boucle des tableau des ennoncer compétence-->
+                    <div style="margin-top:50px;">
                         <table>
                             <thead>
                                 <tr>
-                                    <td style="width:20%;">
-                                        Objectif - Énoncé des compétences
+                                    <td colspan="4">
+                                        @Html.DisplayFor(x => a.EnonceCompetence.description) (@Html.DisplayFor(x => a.EnonceCompetence.codeCompetence))
                                     </td>
-                                    <td style="width:45%;">
-                                        Standard - Contexte de réalisation
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Les éléments de compétence
                                     </td>
                                     <td>
-                                        Indication pédagogiques, s'il y a lieu
+                                        Critères de performance
+                                    </td>
+                                    <td>
+                                        Éléments de connaissances
+                                    </td>
+                                    <td>
+                                        Activités d'apprentissage suggérées
                                     </td>
                                 </tr>
                             </thead>
                             <tbody>
-
-                        @foreach (PlanCadreEnonce a in Model.PlanCadreEnonce)
-                        {
-                            foreach (EnonceCompetence b in Model.EnonceCompetence)
-                            {
-                                if (a.idCompetence == b.idCompetence)
+                                @foreach (ElementCompetence elementCompt in a.EnonceCompetence.ElementCompetence)
                                 {
+                                    //if (b.idCompetence == elementCompt.idCompetence)
+                                    //{
                                     <tr>
-                                        <td>
-                                            @Html.DisplayFor(x => b.description) (@Html.DisplayFor(x => b.codeCompetence))
+                                        <td width="25%">
+                                            @Html.DisplayFor(x => elementCompt.numero)<span>. </span>@Html.DisplayFor(x => elementCompt.description)
                                             <br />
-                                            <br />
-                                            @Html.DisplayFor(x => a.ponderationEnHeure) heures
                                         </td>
-                                        <td>
-                                            @foreach (ContexteRealisation c in Model.ContexteRealisation)
-                                            {
-                                                if (b.idCompetence == c.idCompetence)
-                                                {
-                                                    <div style="margin-top:10px;">
-                                                        @Html.Raw("-")@Html.DisplayFor(x => c.description)
-                                                        
-                                                    </div>
+                                        <td width="35%">
 
+                                            @foreach (CriterePerformance criterePerf in elementCompt.CriterePerformance)
+                                            {
+                                                if (elementCompt.idElement == criterePerf.idElement)
+                                                {
+
+                                                    <div style="margin-top:15px;">
+                                                        <div class="critere-left">
+                                                            @Html.DisplayFor(x => elementCompt.numero)<span>.</span>@Html.DisplayFor(x => criterePerf.numero)
+                                                        </div>
+                                                        <div class="critere-right">
+                                                            @Html.DisplayFor(x => criterePerf.description)
+                                                        </div>
+                                                        <div id="clear"></div>
+                                                    </div>
                                                 }
                                             }
+
                                         </td>
-                                        @if (rowspanDone != true)
-                                        {
-                                            <td rowspan="2">
-                                                @Html.DisplayFor(x => planCadre.indicationPedago)
-                                            </td>
-                                            rowspanDone = true;
-                                        }
-                                        
                                     </tr>
                                 }
-                            }
-                        }
+
                             </tbody>
                         </table>
-
-                        @foreach (PlanCadreEnonce a in Model.PlanCadreEnonce)
-                        {
-                <!-- Affichage en boucle des tableau des ennoncer compétence-->
-                            foreach (EnonceCompetence b in Model.EnonceCompetence)
-                            {
-                                if (a.idCompetence == b.idCompetence)
-                                {
-
-                                    <div style="margin-top:50px;">
-                                        <table>
-                                            <thead>
-                                                <tr>
-                                                    <td colspan="4">
-                                                        @Html.DisplayFor(x => b.description) (@Html.DisplayFor(x => b.codeCompetence))
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        Les éléments de compétence
-                                                    </td>
-                                                    <td>
-                                                        Critères de performance
-                                                    </td>
-                                                    <td>
-                                                        Éléments de connaissances
-                                                    </td>
-                                                    <td>
-                                                        Activités d'apprentissage suggérées
-                                                    </td>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @foreach (ElementCompetence elementCompt in Model.ElementCompetence)
-                                    {
-                                        if (b.idCompetence == elementCompt.idCompetence)
-                                        {
-                                                        <tr>
-                                                            <td width="25%">
-                                                                @Html.DisplayFor(x => elementCompt.numero)<span>. </span>@Html.DisplayFor(x => elementCompt.description)
-                                                                <br />
-                                                            </td>
-                                                            <td width="35%">
-
-                                                                @foreach (CriterePerformance criterePerf in Model.CriterePerformance)
-                                                                {
-                                                                    if (elementCompt.idElement == criterePerf.idElement)
-                                                                    {
-
-                                                                        <div style="margin-top:15px;">
-                                                                            <div class="critere-left">
-                                                                                @Html.DisplayFor(x => elementCompt.numero)<span>.</span>@Html.DisplayFor(x => criterePerf.numero)
-                                                                            </div>
-                                                                            <div class="critere-right">
-                                                                                @Html.DisplayFor(x => criterePerf.description)
-                                                                            </div>
-                                                                            <div id="clear"></div>
-                                                                        </div>
-                                                                    }
-                                                                }
-
-                                                            </td>
-                                                        </tr>
-                                                    }
-                                                }
-                                            </tbody>
-                                        </table>
-                                    </div>
-
-                                }
-                            }
-
-                        }
                     </div>
+
                 }
-            }
-        }
-    </div>
+
+
+
+
+            </div>
+
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+    
     </div>
 </div>
 
