--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
@@ -14,13 +14,10 @@
             </a>
         }
 
-        @if (User.IsInRole("Enseignant")||User.IsInRole("Gestionnaire de stage"))
-        {
-            <a class="icon">
-                <span class="glyphicon glyphicon-briefcase"></span>
-                <p>Stage</p>
-            </a>
-        }
+        <a class="icon" href='@Url.Action("Index", "Rapport")'>
+            <span class="glyphicon glyphicon-folder-open"></span>
+            <p>Rapport</p>
+        </a>
 
         @if (User.IsInRole("Admin"))
         {
