--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_LoginPartial.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_LoginPartial.cshtml
@@ -1,10 +1,6 @@
 ﻿@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm"}))
-    {
-    @Html.AntiForgeryToken()
-        <button onclick="location.href='javascript:document.getElementById(&#39;logoutForm&#39;).submit()'"><span class="glyphicon glyphicon-log-out"></span></button>
-        @*<button onclick="location.href='@Url.Action("Index", "Manage")'"><span class="glyphicon glyphicon-user"></span></button>*@
-    }
+    <a href="@Url.Action("LogOff", "Account", new { id = "logoutForm"})"><span class="glyphicon glyphicon-log-out"></span></a>
+    <a href="@Url.Action("LogOff", "Account", new { id = "logoutForm"})"><span class="glyphicon glyphicon-log-out"></span></a>
 }
