--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
@@ -32,7 +32,7 @@
                     @Html.DisplayFor(modelItem => item.annee)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.DevisMinistere.codeProgramme)-@Html.DisplayFor(modelItem => item.DevisMinistere.annee)-@Html.DisplayFor(modelItem => item.DevisMinistere.codeSpecialisation)
+                    @Html.DisplayFor(modelItem => item.nom)
                 </td>
                 <td class="action-cell">
                     @if (valide)
