--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Manage/ChangePassword.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Manage/ChangePassword.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Changer le formulaire du mot de passe</h4>
+    <h1>Changer le mot de passe</h1>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -34,7 +34,4 @@
             <input type="submit" value="Changer le mot de passe" class="btn btn-default" />
         </div>
     </div>
-}
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 }
