Work in progress(4carlichou)

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ApplicationPlanCadre.Models.Programme>
 
 @{
-    ViewBag.Title = "InstanceProgramme";
+    ViewBag.Title = "Programme";
 }
 
 <div id="super-view">
