--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Info.cshtml
@@ -23,7 +23,7 @@
 
         <hr />
         <h1>Modification</h1>
-        @*<a class="fancy-button" href='@Url.Action("Create", "PlanCadre", new {id = Model.PlanCadre})'><span class="glyphicon glyphicon-plus"><!----></span> Ajouter un plan cadre</a>*@
+        <a class="fancy-button" href='@Url.Action("Create", "PlanCadre", new {id = Model.PlanCadre})'><span class="glyphicon glyphicon-plus"><!----></span> Ajouter un plan cadre</a>
 
     </div>
 </div>
