--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Register.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Register.cshtml
@@ -17,14 +17,14 @@
             <hr />
 
             <div class="form-group">
-                @Html.LabelFor(m => m.prenom, new { @class = "col-md-2 control-label" })
+                @Html.LabelFor(m => m.Prenom, new { @class = "col-md-2 control-label" })
                 <div class="col-md-4">
-                    @Html.TextBoxFor(m => m.prenom, new { @class = "form-control" })
+                    @Html.TextBoxFor(m => m.Prenom, new { @class = "form-control" })
                 </div>
 
-                @Html.LabelFor(m => m.nom, new { @class = "col-md-1 control-label" })
+                @Html.LabelFor(m => m.Nom, new { @class = "col-md-1 control-label" })
                 <div class="col-md-4">
-                    @Html.TextBoxFor(m => m.nom, new { @class = "form-control" })
+                    @Html.TextBoxFor(m => m.Nom, new { @class = "form-control" })
                 </div>
             </div>
 
