--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
@@ -76,13 +76,18 @@
     background-size: contain;
 }
 
-#layout button {
+#layout a {
     width: 50px;
     height: 50px;
     font-size: 24px;
     border: none;
     color: #ffffff;
+    text-align: center;
     transition: 0.1s;
+}
+
+#layout a span {
+    vertical-align: middle;
 }
 
 #layout #nav-button {
@@ -94,7 +99,7 @@
     float: right;
 }
 
-#layout #logoutForm button {
+#layout #logoutForm a {
     float: right;
     background-color: transparent;
     border-left: 1px solid #0d5ec9;
